# SpecFWAT

./: .gitignore  .gitmodules  CMakeLists.txt  CONDA_SETUP.md  README.md  environment.yml  setup_conda_env.sh  test_conda_setup.sh
src/: CMakeLists.txt
src/aux/: CMakeLists.txt  combine_h5.f90  combine_vol_data_vtk.F90  combine_vol_data_vtk.F95  decompose_h5_gll.f90  model_gll.f95  model_grid.f90  model_grid_cart.f90  model_grid_cart_custom.f90  npy.f90  projection_on_FD_grid_mod_fwat.f90
src/fortran-yaml/: CMakeLists.txt  yaml.f90  yaml_types.f90
src/fullwave_adjoint_tomo/: CMakeLists.txt  README.md  fullwave_adjoint_tomo_main.f90  fullwave_adjoint_tomo_par.f90  fwat_input.f90  fwat_utils.f90  inverson_subs.f90  linesearch_sub.f90  postproc_subs.F90  postproc_subs.f90  preproc_collect_data.f90  preproc_measure_adj_subs.f90  preproc_subs.f90  program_dynmbat_sele_ctrlgrp.f95  program_dynmbat_sele_minibatch.f95  program_flexwin.f95  program_fullwave_adjoint_tomo.f95  program_fwat0_forward_data.f90  program_fwat1_fwd_measure_adj.f90  program_fwat2_postproc_opt.f90  program_fwat2_postproc_opt.f95  program_fwat3_linesearch.f90  program_fwat3_linesearch.f95  program_fwat4_cmt3d_fwd.f95  program_fwat5_RTM.f95  program_fwat_mesh_database.f90  program_measure_adj.f95  rules.mk  run_fwat0_forward_data.f90  run_fwat1_fwd_measure_adj.f90  run_fwat2_postproc_opt.f90  run_fwat2_postproc_single.f90  run_fwat3_linesearch.f90  run_fwat3_optim.f90  run_fwat4_cmt3d_fwd.f90  run_fwat5_RTM.f90  run_linesearch.f90  run_optimization.f90  run_postprocessing.F90  run_postprocessing.f90  (+4 more)
src/fullwave_adjoint_tomo/auxiliaries/: add_pert_gaus.f90  add_pert_trigo.f90  model_grid.f90  model_grid_cert.f90  projection_on_FD_grid_mod_fwat.f90
src/fullwave_adjoint_tomo/example_scripts/: create_layered_AK135_model.bash  mk_forcesolution_fwat.bash  mk_forcesolution_fwat_cube2sph.bash  mk_source_list.bash  pbs_FWAT_iter.sh  pbs_add_chb_anomalies.sh  pbs_fwat1_fwd_measure_adj.sh  pbs_fwat2_postproc_opt.sh  pbs_fwat3_linesearch.sh  pbs_smooth_model.bash  rotation_2d.f90  run_chechboard_3D.sh  run_get_telestf.sh  run_time_iterdeconv_PCA.rtz.sh  sbash_add_chb_anomalies.sh  sbash_fwat1_fwd_measure_adj.sh  sbash_fwat2_postproc_opt.sh  sbash_fwat3_linesearch.sh  sbash_postprocessing_Rayl.sh  submit_job_fwat1.sh  submit_job_fwat2.sh  submit_job_fwat3.sh
src/fullwave_adjoint_tomo/grid_interface/: CMakeLists.txt  meshgrid.f90  projection_on_FD_grid_mod_fwat.f90
src/fullwave_adjoint_tomo/optimization/: Makefile  add_model_iso.f95  add_model_iso_cg.f95  add_model_iso_lbfgs.f95  add_model_tiso.f95  add_model_tiso_cg.f95  compute_kernel_integral.f90  get_cg_direction.f90  get_lbfgs_direction.f90  get_sd_direction.f90  model_update.f90  model_update.f95  read_kernels.f90  read_kernels_cg.f90  read_model.f90  read_parameters_lbfgs.f90  read_parameters_tomo.f90  rules.mk  sum_kernels.f95  sum_preconditioned_kernels.f95  tomography_par.f90  write_gradient.f90  write_new_model.f90
src/fullwave_adjoint_tomo/post_processing/: CMakeLists.txt  rules.mk  smooth_sem.F95  smooth_sem_glob.F90  smooth_sem_pde.F90  smooth_sem_sph_pde.F90  smooth_weights_vec.F90  taper_3D_mod.f90
src/fullwave_adjoint_tomo/preproc_flexwin/: CMakeLists.txt  distaz.f90  flexwin.f90  hec_fortran_wrapper.c  io_subs.f90  seismo_subs.f90  select_windows_stalta2.f90  travel_times.f90
src/fullwave_adjoint_tomo/preproc_measure_adj/: CMakeLists.txt  ma_constants.f90  ma_sub.f90  ma_sub2.f90  measure_adj.f90  rotate_adj_src.f90  rules.mk  sacio.f90  xapiir_sub.f90
src/fullwave_adjoint_tomo/preproc_recfunc/: deconit.f90
src/fullwave_adjoint_tomo/specfem_interface/: CMakeLists.txt  create_regions_mesh_fwat.f90  read_mesh_parameter_file_fwat.f90  specfem_initialize_simulation_fwat.F90  specfem_interface.F90  specfem_meshfem3D.f90  specfem_prepare_timerun_fwat.F90  specfem_read_mesh_database.f90  specfem_save_adjoint_kernels_fwat.f90  specfem_setup_sources_receivers_fwat.f90
src/fullwave_adjoint_tomo/teleseis_stf/: fktimes.f90  interpolation_mod.f90  spanlib.f90  telestf_mod.f90
src/generate_databases/: CMakeLists.txt  get_model.F90  model_external_values.F90
src/grid/: CMakeLists.txt  model_external_values.f90  model_grid_data.f90  projection_on_FD_grid_mod_fwat.f90
src/mesh_database_api/: CMakeLists.txt  create_regions_mesh_fwat.f90  fwat_mesh_databases.f90  generate_databases_subs.f90  get_model_fwat.f90  meshfem3D_subs.f90
src/meshfem3D/: CMakeLists.txt  create_meshfem_mesh.f90  meshfem3D_par.f90  read_mesh_parameter_file.f90
src/optimization/: CMakeLists.txt  fwat_optimize.f90  line_search.f90  opt_io.f90  optimize.f90  optimize_grid.f90
src/patch/: CMakeLists.txt  aniso.f90  model_external_values.f90
src/postproc/: CMakeLists.txt  fwat_post_proc.f90  kernel_io.f90  multigrid.f90  post_processing.f90  smooth.f90  smooth_sem_pde.cu  smooth_sem_pde.f90  smooth_sem_pde_stubs.cpp  taper_3D_mod.f90  zprecond.f90
src/preproc/: CMakeLists.txt  data.f90  fk_coupling.f90  fwat_fwd_measure_adj.f90  leq_data.f90  misfit.f90  noise_data.f90  obs_data.f90  prepare_fwd.f90  preproc_fwd_adj.f90  rf_data.f90  syn_data.f90  tele_data.f90  telecc_data.f90  window_chi.f90
src/preproc/adjoint_sources/: CMakeLists.txt  adjoint_source.f90  cc_tt_misfit.f90  ccc_misfit.f90  exponentiated_phase_misfit.f90  mt_tt_misfit.f90  rf_misfit.f90  waveform_conv_misfit.f90  waveform_misfit.f90
src/preproc/measure_adj/: ma_sub.f90  (+2 more)
src/shared/: CMakeLists.txt  adj_config.f90  argparse.f90  axisem_coupling.f90  common.f90  config.f90  distaz.f90  fftpack.f90  fk_coupling.f90  hdf5_interface.f90  input_params.f90  logger.f90  memory_monitor.f90  merge_sort.bk90  mpi_funcs.f90  parallel.f90  projection_on_FD_grid_mod_fwat.f90  shared_par.F90  signal.f90  utils.f90
src/specfem3D/: CMakeLists.txt  compute_arrays_source.f90  couple_with_injection.f90  setup_sources_receivers.f90
src/specfem_interface/: CMakeLists.txt  initialize_simulation.f90  locate_source_fwat.f90  prepare_timerun_fwat.f90  read_mesh_databases.f90  setup_sources_receivers_fwat.f90  specfem_api.f90
(+370 files in other folders)
